--- a/FitnessTracker.V1/Pages/Exercices.razor
+++ b/FitnessTracker.V1/Pages/Exercices.razor
@@ -57,7 +57,7 @@
         </div>
     </div> *@
 </div>
-<h5 class="mt-4">Supprimer toutes les entrées d’un exercice</h5>
+@* <h5 class="mt-4">Supprimer toutes les entrées d’un exercice</h5>
 <div class="d-flex flex-wrap gap-2">
     @foreach (var ex in data.Select(e => e.Exercice).Distinct())
     {
@@ -66,7 +66,7 @@
             🗑️ @ex
         </button>
     }
-</div>
+</div> *@
 @code {
     List<string> exercices = new();
     string selectedExercice = "";
