💡 Mise à jour PWA : service worker, fix alerte nouvelle version

--- a/FitnessTracker.V1/App.razor
+++ b/FitnessTracker.V1/App.razor
@@ -1,38 +1,6 @@
-﻿@* <Router AppAssembly="@typeof(App).Assembly">
-    <Found Context="routeData">
-        <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
-    </Found>
-    <NotFound>
-        <LayoutView Layout="@typeof(MainLayout)">
-            <p>Page introuvable.</p>
-        </LayoutView>
-    </NotFound>
-</Router>
-@inject IJSRuntime JS
+﻿@inject IJSRuntime JS
+@implements IAsyncDisposable
 
-@if (updateAvailable)
-{
-    <div class="alert alert-warning fixed-bottom text-center">
-        🔄 Nouvelle version disponible.
-        <button class="btn btn-sm btn-primary ms-2" @onclick="ReloadApp">Recharger</button>
-    </div>
-}
-
-@code {
-    private bool updateAvailable = false;
-
-    protected override async Task OnInitializedAsync()
-    {
-        DotNetObjectReference<App> dotRef = DotNetObjectReference.Create(this);
-        await JS.InvokeVoidAsync("listenForServiceWorkerUpdates", dotRef);
-        await JS.InvokeVoidAsync("navigator.serviceWorker.controller?.postMessage", "check-for-update");
-    }
-
-    [JSInvokable]
-    public void NotifyUpdateAvailable() => updateAvailable = true;
-
-    private async Task ReloadApp() => await JS.InvokeVoidAsync("location.reload");
-} *@
 <Router AppAssembly="@typeof(App).Assembly">
     <Found Context="routeData">
         <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
@@ -43,9 +11,6 @@
         </LayoutView>
     </NotFound>
 </Router>
-
-@inject IJSRuntime JS
-@implements IAsyncDisposable
 
 @if (updateAvailable)
 {
@@ -65,24 +30,27 @@
         {
             dotRef = DotNetObjectReference.Create(this);
             await JS.InvokeVoidAsync("listenForServiceWorkerUpdates", dotRef);
-
-            // Envoie le message au SW après un petit délai pour s'assurer qu'il est actif
-            await Task.Delay(500);
-            await JS.InvokeVoidAsync("navigator.serviceWorker.controller?.postMessage", "check-for-update");
         }
     }
+
 
     [JSInvokable]
     public void NotifyUpdateAvailable()
     {
-        updateAvailable = true;
-        StateHasChanged();
+        if (!updateAvailable)
+        {
+            updateAvailable = true;
+            StateHasChanged();
+        }
     }
 
     private async Task ReloadApp()
     {
-        await JS.InvokeVoidAsync("location.reload");
+        updateAvailable = false;
+        StateHasChanged(); // Cache la bannière immédiatement
+        await JS.InvokeVoidAsync("forceFullReload");
     }
+
 
     public async ValueTask DisposeAsync()
     {
