--- a/FitnessTracker.V1/Layout/MainLayout.razor
+++ b/FitnessTracker.V1/Layout/MainLayout.razor
@@ -7,7 +7,7 @@
     </div>
 
     <main>
-        <!-- ✅ Barre du haut -->
+        <!-- ✅s Barre du haut -->
         <div class="top-row px-4 d-flex justify-content-between align-items-center bg-dark text-white">
             <div>
                 <h5 class="m-0">FitnessTracker</h5>
