--- a/FitnessTracker.V1/Pages/MonProfil.razor
+++ b/FitnessTracker.V1/Pages/MonProfil.razor
@@ -125,6 +125,7 @@ else
                     {
                         Id = user.Id,
                         Age = 25,
+                        Sexe = "Homme",
                         Level = "Debutant",
                         Objective = "Hypertrophy",
                         SeancesPerWeek = 3,
